# fresh

./: .gitignore  Cargo.toml  TESTS_STATUS.md  config.example.json
.github/workflows/: ci.yml  release-npm.yml
docs/: TODO.md  plugin-api.md
keymaps/: default.json
plugins/: audit_mode.ts  buffer_modified.ts  calculator.ts  clangd-lsp.ts  clangd_support.ts  color_highlighter.ts  config-schema.json  config_editor.ts  csharp-lsp.ts  csharp_support.ts  css-lsp.ts  diagnostics_panel.ts  find_references.ts  git_blame.ts  git_find_file.ts  git_grep.ts  git_gutter.ts  git_log.ts  go-lsp.ts  html-lsp.ts  json-lsp.ts  live_grep.ts  markdown_compose.ts  merge_conflict.ts  path_complete.ts  python-lsp.ts  rust-lsp.ts  search_replace.ts  test_i18n.ts  theme_editor.ts  todo_highlighter.ts  typescript-lsp.ts  vi_mode.ts  welcome.ts
plugins/lib/: fresh.d.ts  index.ts  navigation-controller.ts  panel-manager.ts  virtual-buffer-factory.ts
scripts/: install.sh
src/: actions.rs  chunk_tree.rs  commands.rs  config.rs  config_io.rs  editor.rs  event.rs  indent.rs  input_history.rs  keybindings.rs  lib.rs  lsp_async.rs  main.rs  margin.rs  memstore.rs  partial_config.rs  piece_tree.rs  plugin_api.rs  popup.rs  prompt.rs  state.rs  text_buffer.rs  ts_runtime.rs  viewport.rs  virtual_file.rs  word_navigation.rs
src/app/: file_explorer.rs  file_open_input.rs  help.rs  input.rs  input_dispatch.rs  mod.rs  on_save_actions.rs  plugin_commands.rs  prompt_actions.rs  render.rs  session.rs  terminal.rs  terminal_input.rs
src/editor/: input.rs  mod.rs
src/input/: actions.rs  commands.rs  handler.rs  keybindings.rs
src/model/: event.rs  piece_tree_diff.rs
src/primitives/: grammar_registry.rs  highlight_engine.rs  line_iterator.rs  textmate_highlighter.rs
src/services/lsp/: manager.rs
src/services/plugins/: runtime.rs  thread.rs
src/services/terminal/: term.rs
src/ui/: split_rendering.rs
src/view/: dimming.rs  mod.rs  prompt.rs  split.rs
src/view/controls/: button.rs  dropdown.rs  map_input.rs  mod.rs  number_input.rs  text_input.rs  text_list.rs  toggle.rs
src/view/controls/keybinding_list/: render.rs
src/view/controls/map_input/: input.rs  mod.rs  render.rs
src/view/settings/: render.rs  schema.rs  state.rs
src/view/ui/: file_explorer.rs  split_rendering.rs  view_pipeline.rs
tests/: e2e_tests.rs  integration_tests.rs
tests/common/: git_test_helper.rs  harness.rs  visual_testing.rs
tests/common/snapshots/: e2e_tests__common__visual_testing__Basic Editing__initial.snap  e2e_tests__common__visual_testing__Basic Editing__multiline.snap  e2e_tests__common__visual_testing__Basic Editing__typed_text.snap  e2e_tests__common__visual_testing__Command Palette__filtered.snap  e2e_tests__common__visual_testing__Command Palette__palette_open.snap  e2e_tests__common__visual_testing__File Explorer__dir_expanded.snap  e2e_tests__common__visual_testing__File Explorer__explorer_open.snap  e2e_tests__common__visual_testing__Help System__help_open.snap  e2e_tests__common__visual_testing__LSP Diagnostics__code_without_diagnostics.snap  e2e_tests__common__visual_testing__LSP Diagnostics__diagnostics_with_bullets.snap  e2e_tests__common__visual_testing__LSP Rename__cursor_on_symbol.snap  e2e_tests__common__visual_testing__LSP Rename__initial_code.snap  e2e_tests__common__visual_testing__LSP Rename__rename_complete.snap  e2e_tests__common__visual_testing__LSP Rename__rename_mode_active.snap  e2e_tests__common__visual_testing__LSP Rename__typing_new_name.snap  e2e_tests__common__visual_testing__Large File Cursor Movement__after_25_down.snap  e2e_tests__common__visual_testing__Large File Cursor Movement__after_50_down.snap  e2e_tests__common__visual_testing__Large File Cursor Movement__initial.snap  e2e_tests__common__visual_testing__Large File Cursor Screen Position__line_5.snap  e2e_tests__common__visual_testing__Large File Typing__after_second_typing.snap  e2e_tests__common__visual_testing__Large File Typing__after_typing.snap  e2e_tests__common__visual_testing__Large File Typing__before_typing.snap  e2e_tests__common__visual_testing__Line Wrapping__long_line_wrapped.snap  e2e_tests__common__visual_testing__Line Wrapping__multiple_wrapped.snap  e2e_tests__common__visual_testing__Line Wrapping__wrapped_code.snap  e2e_tests__common__visual_testing__Line Wrapping__wrapping_disabled.snap  e2e_tests__common__visual_testing__Menu Bar Navigation__edit_menu_open.snap  e2e_tests__common__visual_testing__Menu Bar Navigation__file_menu_open.snap  e2e_tests__common__visual_testing__Menu Bar Navigation__help_menu_open.snap  e2e_tests__common__visual_testing__Menu Bar Navigation__menu_item_highlighted.snap  e2e_tests__common__visual_testing__Multi-Language Highlighting__bash_highlighting.snap  e2e_tests__common__visual_testing__Multi-Language Highlighting__c_highlighting.snap  e2e_tests__common__visual_testing__Multi-Language Highlighting__cplusplus_highlighting.snap  e2e_tests__common__visual_testing__Multi-Language Highlighting__csharp_highlighting.snap  e2e_tests__common__visual_testing__Multi-Language Highlighting__css_highlighting.snap  e2e_tests__common__visual_testing__Multi-Language Highlighting__go_highlighting.snap  e2e_tests__common__visual_testing__Multi-Language Highlighting__html_highlighting.snap  e2e_tests__common__visual_testing__Multi-Language Highlighting__java_highlighting.snap  e2e_tests__common__visual_testing__Multi-Language Highlighting__javascript_highlighting.snap  e2e_tests__common__visual_testing__Multi-Language Highlighting__json_highlighting.snap  (+13 more)
tests/e2e/: basic.rs  buffer_settings_commands.rs  command_palette.rs  crash_repro.rs  crlf_rendering.rs  explorer_menu.rs  file_browser.rs  file_explorer.rs  git.rs  gutter.rs  lsp.rs  lsp_order.rs  margin.rs  mod.rs  mouse.rs  multicursor.rs  paste.rs  plugin.rs  recovery.rs  rendering.rs  scrolling.rs  search.rs  session.rs  tab_config.rs  theme_editor.rs  undo_redo.rs  unicode_prompt_bugs.rs  visual_regression.rs  warning_indicators.rs
tests/e2e/plugins/: audit_mode.rs  git.rs  theme_editor.rs
