[package]
name = "fresh-editor"
version = "0.1.52"
authors = ["Noam Lewis"]
edition = "2021"
default-run = "fresh"
description = "A lightweight, fast terminal-based text editor with LSP support and TypeScript plugins"
license = "GPL-2.0"
repository = "https://github.com/sinelaw/fresh"
homepage = "https://sinelaw.github.io/fresh/"
keywords = ["editor", "terminal", "tui", "text-editor", "lsp"]
categories = ["command-line-utilities", "text-editors"]

[[bin]]
name = "fresh"
path = "src/main.rs"
required-features = ["runtime"]

[[bin]]
name = "generate_schema"
path = "src/bin/generate_schema.rs"
# No required-features - works with minimal deps via --no-default-features

[lib]
name = "fresh"
path = "src/lib.rs"

[features]
default = ["plugins", "runtime"]
plugins = ["dep:deno_core", "dep:deno_ast", "dep:deno_error"]
# Runtime feature includes all heavy dependencies needed for the actual editor
runtime = [
    "dep:crossterm",
    "dep:ratatui",
    "dep:chrono",
    "dep:clap",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:tree-sitter",
    "dep:tree-sitter-highlight",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-python",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-html",
    "dep:tree-sitter-css",
    "dep:tree-sitter-c",
    "dep:tree-sitter-cpp",
    "dep:tree-sitter-go",
    "dep:tree-sitter-json",
    "dep:tree-sitter-java",
    "dep:tree-sitter-c-sharp",
    "dep:tree-sitter-php",
    "dep:tree-sitter-ruby",
    "dep:tree-sitter-bash",
    "dep:tree-sitter-lua",
    "dep:lsp-types",
    "dep:url",
    "dep:tokio",
    "dep:async-trait",
    "dep:lru",
    "dep:ignore",
    "dep:regex",
    "dep:libc",
    "dep:libloading",
    "dep:nix",
    "dep:anyhow",
    "dep:dirs",
    "dep:pulldown-cmark",
    "dep:sha2",
    "dep:arboard",
    "dep:syntect",
    "dep:ureq",
    "dep:unicode-width",
    "dep:alacritty_terminal",
    "dep:portable-pty",
]
# Schema-only feature for minimal builds (just schema generation)
schema-only = []

[dependencies]
# Always required (for schema generation and runtime)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.1", features = ["preserve_order"] }  # JSON Schema generation for config editor

# Runtime dependencies (optional, enabled by "runtime" feature)
crossterm = { version = "0.29.0", features = ["osc52"], optional = true }
ratatui = { version = "0.29.0", optional = true }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"], optional = true }
clap = { version = "4.5", default-features = false, features = ["derive", "std", "help", "usage", "error-context"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

tree-sitter = { version = "0.25.10", optional = true }
tree-sitter-highlight = { version = "0.25.10", optional = true }
tree-sitter-rust = { version = "0.24.0", optional = true }

lsp-types = { version = "0.97", default-features = false, optional = true }
url = { version = "2.5", optional = true }
tokio = { version = "1.48", features = ["fs", "io-util", "process", "rt", "rt-multi-thread", "sync", "time", "macros"], optional = true }
async-trait = { version = "0.1", optional = true }
lru = { version = "0.16", optional = true }
ignore = { version = "0.4", default-features = false, optional = true }
regex = { version = "1.12", optional = true }
libc = { version = "0.2", optional = true }
libloading = { version = "0.9", optional = true }
nix = { version = "0.30", features = ["signal", "pthread", "resource", "poll", "fs"], optional = true }
deno_core = { version = "0.373.0", default-features = false, features = ["v8_use_custom_libcxx"], optional = true }
deno_ast = { version = "0.51.0", default-features = false, features = ["transpiling"], optional = true }
deno_error = { version = "0.7", optional = true }
tree-sitter-python = { version = "0.25.0", optional = true }
tree-sitter-javascript = { version = "0.25.0", optional = true }
tree-sitter-typescript = { version = "0.23.2", optional = true }
tree-sitter-html = { version = "0.23.2", optional = true }
tree-sitter-css = { version = "0.25.0", optional = true }
tree-sitter-c = { version = "0.24.1", optional = true }
tree-sitter-cpp = { version = "0.23.4", optional = true }
tree-sitter-go = { version = "0.25.0", optional = true }
tree-sitter-json = { version = "0.24.8", optional = true }
tree-sitter-java = { version = "0.23.5", optional = true }
tree-sitter-c-sharp = { version = "0.23.1", optional = true }
tree-sitter-php = { version = "0.24.2", optional = true }
tree-sitter-ruby = { version = "0.23.1", optional = true }
tree-sitter-bash = { version = "0.25.0", optional = true }
tree-sitter-lua = { version = "0.2.0", optional = true }
anyhow = { version = "1.0.100", default-features = false, optional = true }
dirs = { version = "6.0", optional = true }
pulldown-cmark = { version = "0.13", default-features = false, optional = true }
sha2 = { version = "0.10", optional = true }
arboard = { version = "3.6", default-features = false, optional = true }
syntect = { version = "5.2", optional = true }
ureq = { version = "2.10", default-features = false, features = ["tls"], optional = true }
unicode-width = { version = "0.2", optional = true }

# Terminal emulation (optional)
alacritty_terminal = { version = "0.25", optional = true }
portable-pty = { version = "0.9", optional = true }

[dev-dependencies]
proptest = "1.9"
tempfile = "3.23.0"
insta = { version = "1.44", features = ["yaml"] }
vt100 = "0.15"  # Virtual terminal emulator for testing real ANSI output
ctor = "0.6.1"
tiny_http = "0.12"  # Lightweight HTTP server for testing release checker

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }

[build-dependencies]
serde_json = "1.0"

[profile.release]
debug = true
split-debuginfo = "packed"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.dist]
# Point dist at the changelog so GitHub Releases get populated
changelog = "CHANGELOG.md"

# Debian package configuration for cargo-deb
[package.metadata.deb]
maintainer = "Noam Lewis"
section = "editors"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/fresh", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/fresh-editor/", "644"],
    ["plugins/*", "usr/share/fresh-editor/plugins/", "644"],
    ["plugins/lib/*", "usr/share/fresh-editor/plugins/lib/", "644"],
    ["plugins/examples/*", "usr/share/fresh-editor/plugins/examples/", "644"],
]
extended-description = """
Fresh is a lightweight, fast terminal-based text editor with LSP support
and TypeScript plugins. It provides syntax highlighting, code completion,
and other IDE-like features in a minimal terminal interface."""

# RPM package configuration for cargo-generate-rpm
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/fresh", dest = "/usr/bin/fresh", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/fresh-editor/README.md", mode = "644" },
    { source = "plugins/*.ts", dest = "/usr/share/fresh-editor/plugins/", mode = "644" },
    { source = "plugins/*.json", dest = "/usr/share/fresh-editor/plugins/", mode = "644" },
    { source = "plugins/*.md", dest = "/usr/share/fresh-editor/plugins/", mode = "644" },
    { source = "plugins/lib/*", dest = "/usr/share/fresh-editor/plugins/lib/", mode = "644" },
    { source = "plugins/examples/*", dest = "/usr/share/fresh-editor/plugins/examples/", mode = "644" },
]
